Front-end refined + Checking of chain id (only 3 (Ropsten) and 1337 (Ganache) accepted) + Commented and cleaned front-end files + Approve function now increase allowance to maximum + Footer updated + Now the website tells errors/problems via alerts to the user + Added favicon

--- a/Website/index.html
+++ b/Website/index.html
@@ -8,14 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
-
-    <style>
-        button:disabled, button[disabled] {
-            cursor: auto;
-            background-color: #cccccc;
-            color: #666666;
-        }
-    </style>
 </head>
 
 <body>
@@ -43,15 +35,15 @@
                     <h2 class="text-center">Your balances</h2>
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            TokenA
+                            TKA
                             <span class="badge badge-warning badge-pill" id="tka-balance">0</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            TokenB
+                            TKB
                             <span class="badge badge-warning badge-pill" id="tkb-balance">0</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Django
+                            DJG
                             <span class="badge badge-warning badge-pill" id="djg-balance">0</span>
                         </li>
                     </ul>
@@ -130,8 +122,13 @@
             </div>
         </div>
     </div>
+    
+    <!-- Footer -->
     <div class="mt-5 p-4 bg-dark text-white text-center">
-        <p>Footer</p>
+        <p><b>Django Application</b></p>
+        <p>This is a project developed for the Consensys Blockchain Developer Bootcamp, more info about how this works 
+            <a href="https://github.com/Trieste97/blockchain-developer-bootcamp-final-project">here</a>
+        </p>
     </div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
